--- a/src/accessories.html
+++ b/src/accessories.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./sass/accessories.scss" />
   </head>
   <body>
-    <!-- Section  header -->
+    <!-- section  header -->
     <include src="./partials/common/_header.html"></include>
     <!-- Section mobile Menu -->
     <main>
