--- a/src/accessories.html
+++ b/src/accessories.html
@@ -21,7 +21,7 @@
       <!-- Section Accessories -->
       <include src="./partials/accessoriesPage/_accessories.html"></include>
     </main>
-    <!-- Section footer -->
+    <!-- section footer -->
     <include src="./partials/common/_footer.html"></include>
 
     <script src="./js/index.js"></script>
